--- a/ops/base/environment/Makefile
+++ b/ops/base/environment/Makefile
@@ -56,7 +56,7 @@ buildpush:
 apply:
 	@rm $(MY_PATH).cache/ip_* || true
 	@echo "Applying with tag=$(DOCKER_TAG) user=$(USER) environment_name=$(ENVIRONMENT_NAME)"
-	@terraform apply -var 'docker_tag=$(DOCKER_TAG)' -var 'user=$(USER)' -var 'environment_name=$(shell basename $(MY_PATH))' -parallelism=30
+	@terraform apply -var 'docker_tag=$(DOCKER_TAG)' -var 'user=$(USER)' -var 'environment_name=$(shell basename $(MY_PATH))'
 	@echo "$(DOCKER_TAG)" > $(MY_PATH).cache/docker_tag
 
 # Get the docker_tag of the last successful run from the .cache. Error out if not able to find
@@ -85,4 +85,8 @@ show:
 	@echo ""
 
 testdump:
-	python3 $(CILANTRO_ROOT)/ops/tools/dumpatron.py $(MY_PATH)
+	python3 $(CILANTRO_ROOT)/ops/tools/dump_dat.py $(MY_PATH)
+
+
+test:
+	python3 $(CILANTRO_ROOT)/ops/tools/test_end_to_end.py $(MY_PATH)
