--- a/ops/base/environment/Makefile
+++ b/ops/base/environment/Makefile
@@ -5,7 +5,8 @@ MY_PATH ?= $(dir $(abspath $(lastword $(MAKEFILE_LIST))))
 CILANTRO_ROOT ?= $(join $(MY_PATH), ../../../)
 
 # Restrict the parallelism to the minimum necessary for proper launch due to bugs with too much parallel SSH
-PARALLELISM ?= $(shell find $(MY_PATH)conf/* -maxdepth 0 -type d | wc -l | sed 's/^ *//;s/ *$$//')
+NODE_COUNT ?= $(shell find $(MY_PATH)conf/* -maxdepth 0 -type d | wc -l | sed 's/^ *//;s/ *$$//')
+PARALLELISM ?= $(shell if [ "$(NODE_COUNT)" -gt "10" ]; then echo "-parallelism=$(NODE_COUNT)"; else echo ""; fi)
 
 # Resolve the tag using the tag resolver script, this is the default
 DOCKER_TAG ?= $(shell bash $(CILANTRO_ROOT)/ops/tools/generate_tag.sh)
@@ -57,8 +58,8 @@ buildpush:
 # Run the necessary terraform application process
 apply:
 	@rm $(MY_PATH).cache/ip_* || true
-	@echo "Applying with tag=$(DOCKER_TAG) user=$(USER) environment_name=$(shell basename $(MY_PATH)) parallelism=$(PARALLELISM)"
-	@terraform apply -var 'docker_tag=$(DOCKER_TAG)' -var 'user=$(USER)' -var 'environment_name=$(shell basename $(MY_PATH))' -parallelism=$(PARALLELISM)
+	@echo "Applying with tag=$(DOCKER_TAG) user=$(USER) environment_name=$(shell basename $(MY_PATH)) flags='$(PARALLELISM)'"
+	@terraform apply -var 'docker_tag=$(DOCKER_TAG)' -var 'user=$(USER)' -var 'environment_name=$(shell basename $(MY_PATH))' $(PARALLELISM)
 	@echo "$(DOCKER_TAG)" > $(MY_PATH).cache/docker_tag
 
 # Get the docker_tag of the last successful run from the .cache. Error out if not able to find
